[package]
authors = ["hikaru-yamaguchi"]
name = "discord-bot-rust-huit-hy1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

serenity = {version = "0.11.2", features = ["framework", "standard_framework"]}

tokio = { version = "1.19.2", features = ["full"] }
env = { version = "0.0.0"}